test/should_fail/cast1.fluffy
export main
func main() : int:
	var l : byte*
	var l2 : unsigned byte* = l
	return 0
